--- a/.github/workflows/build-binaries.yml
+++ b/.github/workflows/build-binaries.yml
@@ -80,6 +80,7 @@ jobs:
     env:
       version: ${{ needs.check-version.outputs.version }}
     strategy:
+      fail-fast: false
       matrix:
         platform:
           - target: loongarch64-unknown-linux-gnu
