--- a/.github/workflows/build-binaries.yml
+++ b/.github/workflows/build-binaries.yml
@@ -98,8 +98,20 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version: ${{ env.PYTHON_VERSION }}
+      - uses: astral-sh/setup-uv@v6
+        with:
+          version: "latest"
+          enable-cache: true
       - name: "Prep README.md"
-        run: python scripts/transform_readme.py --target pypi
+        run: |
+          python scripts/transform_readme.py --target pypi
+      - name: Sync Python Releases
+        run: |
+          curl -sL https://github.com/loong64/uv/raw/refs/heads/main/patch_loong64.patch | git apply
+          uv run -- fetch-download-metadata.py
+        working-directory: ./crates/uv-python
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       # uv
       - name: "Build wheels"
