--- a/.github/workflows/build-binaries.yml
+++ b/.github/workflows/build-binaries.yml
@@ -105,7 +105,7 @@ jobs:
       - name: "Prep README.md"
         run: |
           curl -sL https://github.com/loong64/uv/raw/refs/heads/main/patch_loong64.patch | git apply
-          cargo update --package libc --precise 0.2.174
+          # cargo update --package libc --precise 0.2.174
           python scripts/transform_readme.py --target pypi
       - name: Sync Python Releases
         run: |
